compiler/testData/codegen/box/involvesIrInterpreter/intrinsicConst/kt58717.kt
// LANGUAGE: +IntrinsicConstEvaluation
// DONT_TARGET_EXACT_BACKEND: JVM
// IGNORE_GLOBAL_METADATA
// ^^^ EVALUATED{FIR} instead of EVALUATED

var result = "Fail"

object O {
    fun foo() {}

    init {
        result = "OK"
    }
}

fun box(): String {
    O::foo.<!EVALUATED("foo")!>name<!>
    return result
}
